--- a/src/styles.css
+++ b/src/styles.css
@@ -1,21 +1,155 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-    box-sizing: border-box;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  /* border: 1px solid red; */
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  box-sizing: border-box;
+}
+
+@font-face {
+  font-family: "Roboto Flex";
+  src: url(font/RobotoFlex-VariableFont_GRAD\,XOPQ\,XTRA\,YOPQ\,YTAS\,YTDE\,YTFI\,YTLC\,YTUC\,opsz\,slnt\,wdth\,wght.ttf);
+}
+
+:root {
+  --MAIN-COLOUR: #fafaf9;
+  --BG-COLOUR: #e5e7eb;
+  --TEXT-LIGHT: #a3a3a3;
+  --ACCENT-1: #0ea5e9;
+  --ACCENT-2: #facc15;
+  font-family: "Roboto Flex", sans-serif;
+  font-size: 1rem;
+  line-height: 1.5;
+}
+
+body {
+  background-color: var(--BG-COLOUR);
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.game-section {
+  width: fit-content;
+  background-color: var(--MAIN-COLOUR);
+  display: flex;
+  justify-content: space-evenly;
+  gap: 1.5rem;
+  padding: 0.5rem;
+  border-radius: 1.5rem;
+  box-shadow: 2px 3px 5px 0px #bcbcbc;
+}
+
+.gameboard-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+  padding: 1rem;
+}
+
+.gameboard-wrapper > h2 {
+  font-size: 1.2rem;
+}
+
+.gameboard {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid var(--TEXT-LIGHT);
+}
+
+.gameboard > div {
+  width: fit-content;
+  display: flex;
+}
+
+.cell {
+  border: 1px solid var(--TEXT-LIGHT);
+  width: 2rem;
+  height: 2rem;
 }
