feat: comp cells change colour on hover/click

--- a/src/styles.css
+++ b/src/styles.css
@@ -154,6 +154,14 @@ body {
   height: 2rem;
 }
 
+.active:hover {
+  background-color: var(--BG-COLOUR);
+}
+
+.active:active {
+  background-color: var(--TEXT-LIGHT);
+}
+
 /* SHIPS */
 
 .ship0 {
