--- a/src/styles.css
+++ b/src/styles.css
@@ -126,6 +126,10 @@ body {
   box-shadow: 2px 3px 5px 0px #bcbcbc;
 }
 
+#announcement {
+  text-transform: uppercase;
+}
+
 /* GAME SECTION */
 
 .game-section {
